openafs (1.4.2-6) unstable; urgency=medium

  * Apply upstream fix to use a single high-numbered group for the PAG on
    2.6 kernels and sort the group properly.  Fixes AFS-caused group
    ordering problems that could lead the kernel to ignore some group
    membership for users.  (Closes: #414911)
  * Apply upstream fix for segfaults in pts rename.  (Closes: #409184)
  * Apply upstream fix to show reasonable free space numbers for AFS in
    df.  Without this fix, some programs which use df to check free space
    may think that directories in AFS are full and prevent the user from
    attempting to write files.  (Closes: #415294)
  * Translation updates:
    - Dutch, thanks cobaco.  (Closes: #413701)
    - Portuguese, thanks Miguel Figueiredo.  (Closes: #414800)

 --

openafs (1.4.2-5) unstable; urgency=low

  * Translation updates:
    - Chinese, thanks Chun Tian (binghe).  (Closes: #406063)

 -- Russ Allbery <rra@debian.org>  Sun, 28 Jan 2007 13:43:16 -0800

openafs (1.4.2-4) unstable; urgency=low

  * Update documentation to note that enabling v4 support or running
    krb524d is no longer required for aklog to work.
  * Translation updates:
    - German, thanks Henrik Kroeger.  (Closes: #400800)

 -- Russ Allbery <rra@debian.org>  Sun, 17 Dec 2006 17:09:41 -0800

openafs (1.4.2-3) unstable; urgency=low

  * No longer pass explicit cache tuning options to afsd and instead let
    OpenAFS automatically choose tuning based on the cache size.
  * Accept trailing whitespace in ThisCell.
  * Fix path canonicalization on the server, enabling bos getlog with a
    simple log name to work properly against a Debian bosserver.
  * Change the documentation of afsd -shutdown to be less dire and more
    accurate.  Thanks, Daniel J. Priem.  (Closes: #394990)
  * Document (at least partially) AFS's mapping of Kerberos v5 principal
    names to Kerberos v4 format in the aklog man page.  Thanks, Daniel
    J. Priem.  (Closes: #394832)